# mp3-player

./: .gitignore  CMakeLists.txt  README.md  programmDigram.txt
.github/workflows/: release.yml
include/data-source/: SfmlAudioEngine.hpp  TrackRepository.hpp
include/domain/: AudioEngine.hpp  PlaybackQueue.hpp  Playlist.hpp  Track.hpp
include/factories/: AudioFactory.hpp  SfmlAudioEngineFactory.hpp
include/presentation/: Client.hpp  ConsoleMenu.hpp  PlayerApplication.hpp  PlaylistPrinter.hpp  TrackPrinter.hpp
qml/: Main.qml
src/lib/: Client.cpp  ConsoleMenu.cpp  PlaybackQueue.cpp  PlayerApplication.cpp  Playlist.cpp  PlaylistPrinter.cpp  SfmlAudioEngine.cpp  SfmlAudioEngineFactory.cpp  Track.cpp  TrackPrinter.cpp  TrackRepository.cpp
src/main/: main.cpp
